--- a/index.html
+++ b/index.html
@@ -102,10 +102,14 @@
 
     h1 {
         font-size: 3.3rem; /* Smaller header font size for mobile */
+	text-align: left; /* Align text to the left for mobile */
+        margin: 20px 0; /* Add margin for spacing */
     }
 
     p {
         font-size: 1rem; /* Smaller paragraph font size for mobile */
+	text-align: left; /* Align text to the left for mobile */
+        margin: 10px 0; /* Add margin for spacing */
     }
 }
 
