--- a/index.html
+++ b/index.html
@@ -102,14 +102,13 @@
 
     h1 {
         font-size: 3.3rem; /* Smaller header font size for mobile */
-	text-align: left; /* Align text to the left for mobile */
-        margin: 20px 0; /* Add margin for spacing */
+	text-align: center; /* Align text to the left for mobile */
     }
 
     p {
         font-size: 1rem; /* Smaller paragraph font size for mobile */
-	text-align: left; /* Align text to the left for mobile */
-        margin: 10px 0; /* Add margin for spacing */
+        margin: 10px 0 20px 0
+        text-align: left; /* Align text to the left for mobile */
     }
 }
 
