--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
         .logo {
             position: relative;
+            justify-content: center;
             top: -96px;
             height: 240px; /* Adjusted logo size */
             z-index: 2;
